# 3DEngine

./: .gitignore  .travis.yml  3DEngine.sln  CMakeLists.txt  README.md
3DEngine/: 3DEngine.vcxproj  3DEngine.vcxproj.filters
3DEngine/libs/tinyobjloader/: tiny_obj_loader.h
3DEngine/res/shaders/: debug.frag  debug.geom  debug.vert  forward-directional.frag  forward-directional.vert  forward-point.frag  forward-point.vert  forward-spot.frag  forward-spot.vert  lighting.glsl  shadow-map.frag  shadow-map.vert  skybox.frag  skybox.vert
3DEngine/src/: Main.cpp  TestScene.cpp  TestScene.h
3DEngine/src/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  Light.cpp  Light.h
3DEngine/src/core/: AABox.cpp  AABox.h  Core.cpp  Core.h  Debug.cpp  Debug.h  Frustum.cpp  Frustum.h  Input.cpp  Input.h  NamedObject.cpp  NamedObject.h  Node.cpp  Node.h  ResourcesMgr.cpp  ResourcesMgr.h  Scene.cpp  Scene.h  Time.h  Transform.cpp  (+1 more)
libs/glew/: glew.pc
res/models/: default.mtl
res/shaders/: forward-point.vert  forward-spot.frag  forward-spot.vert  shadow-map.frag  skybox.frag  skybox.vert
src/: 3DEngine.h  TestScene.h
src/components/: Camera.cpp  Component.h  Entity.cpp  Entity.h  Light.cpp  Light.h
src/core/: AABox.h  Core.cpp  Core.h  Debug.h  Frustum.cpp  Frustum.h  Input.cpp  NamedObject.h  Node.cpp  Node.h  ResourcesMgr.h  Time.h  Transform.cpp
src/rendering/: Attenuation.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp
(+43 files in other folders)
