CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(3DEngine)

SET(CMAKE_CXX_STANDARD 14)

# Sources
FILE(GLOB_RECURSE SRC_FILES "src/*")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
MESSAGE(STATUS "${SRC_FILES}")
ADD_EXECUTABLE(Engine "${SRC_FILES}")

# Libraries
SET(LIBS_DIR ${CMAKE_SOURCE_DIR}/libs)

INCLUDE_DIRECTORIES(${LIBS_DIR}/tinyobjloader)

INCLUDE_DIRECTORIES(${LIBS_DIR}/stb)

INCLUDE_DIRECTORIES(${LIBS_DIR}/glm)

INCLUDE_DIRECTORIES(${LIBS_DIR}/glfw/include)
OPTION(GLFW_BUILD_EXAMPLES "Build the GLFW example programs" OFF)
OPTION(GLFW_BUILD_TESTS "Build the GLFW test programs" OFF)
OPTION(GLFW_BUILD_DOCS "Build the GLFW documentation" OFF)
OPTION(GLFW_INSTALL "Generate installation target" OFF)
ADD_SUBDIRECTORY(${LIBS_DIR}/glfw)
TARGET_LINK_LIBRARIES(Engine glfw)
SET_PROPERTY(TARGET glfw PROPERTY FOLDER Libs)

INCLUDE_DIRECTORIES(${LIBS_DIR}/glew/include)
OPTION(BUILD_UTILS "utilities" OFF)
ADD_SUBDIRECTORY(${LIBS_DIR}/glew/build/cmake)
TARGET_LINK_LIBRARIES(Engine glew_s)
SET_PROPERTY(TARGET glew glew_s uninstall PROPERTY FOLDER Libs)
SET_TARGET_PROPERTIES(glew uninstall PROPERTIES EXCLUDE_FROM_ALL 1)

# Resources
FILE(COPY ${CMAKE_SOURCE_DIR}/res DESTINATION "${CMAKE_BINARY_DIR}")

# VS project properties
SET_PROPERTY(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Engine)
